Добавлен letter-spacing для bonus-group-item (fix size for Safari)

--- a/css/style.css
+++ b/css/style.css
@@ -33740,6 +33740,7 @@ input.input-pink {
   text-transform: uppercase;
   border-radius: 5px;
   font-weight: 600;
+  letter-spacing: 1.5px;
 }
 
 .quiz .quiz-title .quiz-title__bonus-group .quiz-title__bonus-item .mdi {
